max height on header image to avoid it being too big

--- a/static/public/stylesheets/style.css
+++ b/static/public/stylesheets/style.css
@@ -4,6 +4,10 @@ body {
   color: white;
 }
 
+header img {
+  max-height: 130px;
+}
+
 /* #choicesForm button{
   margin-top: 40px;
   text-align: center;
